# lcd-ntp-clock-esp8266

lcd-ntp/: platformio.ini
lcd-ntp/data/config/: config.json
lcd-ntp/docs/blueprints/ntpClock/: ntpClock.kicad_prl  ntpClock.kicad_pro  ntpClock.kicad_sch
lcd-ntp/include/: configNames.h  serialDebug.h  special_chars.h  states.h
lcd-ntp/lib/LiquidCrystal/: .gitignore  CMakeLists.txt  README.adoc  library.json  library.properties
lcd-ntp/lib/LiquidCrystal/examples/CompleteTest/: CompleteTest.ino
lcd-ntp/lib/LiquidCrystal/src/: LiquidCrystal_Base.h
lcd-ntp/lib/LiquidCrystal/src/coreLCD/: LiquidCrystal.cpp  LiquidCrystal_Base.cpp  LiquidCrystal_Base.h  LiquidCrystal_I2C.cpp
lcd-ntp/lib/async-esp-fs-logs-webserver/src/: AsyncFsWebServer.cpp  SerialLog.h
lcd-ntp/src/: main.cpp
